# rtm-glib

./: ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  rtm-glib.pc.in
doc/reference/: Makefile.am
examples/: Makefile.am  rtm-glib-example.c
rtm-glib/: Makefile.am  rtm-contact.c  rtm-contact.h  rtm-error.c  rtm-error.h  rtm-glib.c  rtm-glib.h  rtm-list.c  rtm-list.h  rtm-location.c  rtm-location.h  rtm-task.c  rtm-task.h  rtm-time-zone.c  rtm-time-zone.h  rtm-util.c  rtm-util.h
tests/: Makefile.am  check-rtm-contact.c  check-rtm-list.c  check-rtm-location.c  check-rtm-task.c  check-rtm-time-zone.c
